Añadido de la música de fondo a las vistas

--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
         <button class="enter-button" onclick="location.href='views/intro.html';">START</button>
     </div>
     
+<audio id="miAudio" src="src/audio/Ruins.mp3" autoplay loop muted></audio>
 
+<script src="src/js/background_music.js" type="module"></script>
+ <div id="content"></div>
+    
 </body>
 </html>
